# PACKGUARD

./: .env.example  .gitignore  API_CONTRACT.md  README.md  package-lock.json  start.sh  start_all.sh
Orchestrator/: .env.example  aggregator.py  api.http  debate.py  lot_schema.py  main.py  requirements.txt  setup.py  start.sh
Orchestrator/kb/: cases.json  embed.py  (+1 more)
Physics_Model/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
Physics_Model/references/: killer_demo_trace.txt
Physics_Model/src/packguard_physics/: __init__.py  api.py  arrhenius_imc.py  blacks_equation.py  coffin_manson.py  griffith_fracture.py  pecks_model.py  survival_simulator.py  types.py  warpage.py  weibull_fit.py  wire_sweep.py
Physics_Model/tests/: test_api.py  test_arrhenius_imc.py  test_blacks_equation.py  test_coffin_manson.py  test_griffith_fracture.py  test_pecks_model.py  test_survival_simulator.py  test_void_thermal_resistance.py  test_warpage.py  test_wire_sweep.py
Pipeline/: README.md  pyproject.toml
Pipeline/docs/: lot_state_schema.json
Pipeline/docs/examples/: README.md  lot_state_clean_SHIP.json  lot_state_debate_HOLD.json  lot_state_early_kill_REJECT.json  physics_output_examples.json
Pipeline/packguard_pipeline/: export_schema.py  mock_data.py  models.py  physics_adapter.py
UI/: API_CONTRACT.md  QA_Defence.md  package-lock.json  package.json
app/: page.tsx
frontend/: index.html
kb/: cases_meta.pkl  index.faiss  tfidf_vectorizer.pkl
orchestrator/: prompt.py  service.py
pdf_gen/: generator.py
tests/: e2e_smoke.sh  test_weibull_fit.py
(+16 files in other folders)
