[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packguard-pipeline"
version = "0.1.0"
description = "PackGuard inline 7-checkpoint pipeline + CV (Person 2)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "python-multipart>=0.0.20",
  "numpy>=2.0",
  "pillow>=11.0",
  "opencv-python>=4.10",
  "httpx>=0.28",
]

[tool.setuptools.packages.find]
include = ["packguard_pipeline*"]
exclude = ["tests*", "scripts*", "data*", "docs*"]
